--- a/dotfiles.org
+++ b/dotfiles.org
@@ -140,6 +140,7 @@ To apply configuration, run:
   gnome-system-monitor.desktop
   gufw.desktop
   ibus-setup.desktop
+  lstopo.desktop
   org.gnome.DiskUtility.desktop
   org.gnome.Logs.desktop
   org.gnome.Terminal.desktop
