[emacs] Add PragmataPro 0.827 ligatures.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -527,18 +527,20 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
                 ("<\""  . ?\uE9ED) ("<:"  . ?\uE9EE) ("<->"  . ?\uE9EF)
                 ("<!--" . ?\uE9F0) ("<--" . ?\uE9F1) ("<~<"  . ?\uE9F2)
                 ("<==>" . ?\uE9F3) ("<|-" . ?\uE9F4) ("<||"  . ?\uE9F5)
-                ("<<|"  . ?\uE9F6)
+                ("<<|"  . ?\uE9F6) ("<-<" . ?\uE9F7) ("<-->" . ?\uE9F8)
+                ("<<==" . ?\uE9F9) ("<==" . ?\uE9FA)
                 ;; =
-                ("=<<" . ?\uEA00) ("=="  . ?\uEA01) ("===" . ?\uEA02)
-                ("==>" . ?\uEA03) ("=>"  . ?\uEA04) ("=~"  . ?\uEA05)
-                ("=>>" . ?\uEA06) ("=/=" . ?\uEA07)
+                ("=<<"  . ?\uEA00) ("=="  . ?\uEA01) ("===" . ?\uEA02)
+                ("==>"  . ?\uEA03) ("=>"  . ?\uEA04) ("=~"  . ?\uEA05)
+                ("=>>"  . ?\uEA06) ("=/=" . ?\uEA07) ("=~=" . ?\uEA08)
+                ("==>>" . ?\uEA09)
                 ;; ≡
                 ("≡≡" . ?\uEA10) ("≡≡≡" . ?\uEA11) ("≡:≡" . ?\uEA12)
                 ;; >
                 (">-"  . ?\uEA20) (">="  . ?\uEA21) (">>"  . ?\uEA22)
                 (">>-" . ?\uEA23) (">>=" . ?\uEA24) (">>>" . ?\uEA25)
                 (">=>" . ?\uEA26) (">>^" . ?\uEA27) (">>|" . ?\uEA28)
-                (">!=" . ?\uEA29)
+                (">!=" . ?\uEA29) (">->" . ?\uEA2A)
                 ;; ?
                 ("??" . ?\uEA40) ("?~"  . ?\uEA41) ("?=" . ?\uEA42)
                 ("?>" . ?\uEA43) ("???" . ?\uEA44) ("?." . ?\uEA45)
@@ -555,14 +557,16 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
                 ("|||"  . ?\uEA63) ("|+|" . ?\uEA64) ("|->"  . ?\uEA65)
                 ("|-->" . ?\uEA66) ("|=>" . ?\uEA67) ("|==>" . ?\uEA68)
                 ("|>-"  . ?\uEA69) ("|<<" . ?\uEA6A) ("||>"  . ?\uEA6B)
-                ("|>>"  . ?\uEA6C)
+                ("|>>"  . ?\uEA6C) ("|-"  . ?\uEA6D) ("||-"  . ?\uEA6E)
                 ;; ~
                 ("~="  . ?\uEA70) ("~>" . ?\uEA71) ("~~>" . ?\uEA72)
                 ("~>>" . ?\uEA73)
                 ;; [
                 ("[[" . ?\uEA80) ("]]" . ?\uEA81)
                 ;; "
-                ("\">" . ?\uEA90))))))
+                ("\">" . ?\uEA90)
+                ;; _
+                ("_|_" . ?\uEA97))))))
       (append pragmata safe))
     "Alist of pretty symbol to composition specification pairs.")
 
