--- a/dotfiles.org
+++ b/dotfiles.org
@@ -63,6 +63,7 @@ To apply configuration, run:
 #+BEGIN_SRC fundamental
   chromium.desktop
   firefox.desktop
+  gnome-ring.desktop
   jdownloader.desktop
   org.baedert.corebird.desktop
   org.gnome.Evolution.desktop
