--- a/README.org
+++ b/README.org
@@ -35,7 +35,7 @@ Finally, copy the dotfiles to your home directory.
   - Erlang:
     - [[https://www.erlang.org/][Erlang/OTP]]
   - HTML & CSS:
-    - [[https://github.com/vscode-langservers/vscode-html-languageserver-bin][vscode-html-languageserver-bin]]
+    - [[https://github.com/vscode-langservers/vscode-html-languageserver-bin][vscode-html-languageserver-bin]] and [[https://github.com/vscode-langservers/vscode-css-languageserver-bin][vscode-css-languageserver-bin]]
     - [[http://www.html-tidy.org/][HTML Tidy]]
   - JavaScript:
     - [[https://nodejs.org/][Node.js]]
@@ -81,7 +81,7 @@ To install dependencies on Arch Linux, run:
   pacman -S erlang-nox
 
   ## HTML & CSS
-  npm i -g vscode-html-languageserver-bin
+  npm i -g vscode-html-languageserver-bin vscode-css-languageserver-bin
   pacman -S tidy
 
   ## JavaScript
